Fix width and visibility issue with columns

--- a/assets/styles/table.scss
+++ b/assets/styles/table.scss
@@ -5,6 +5,12 @@
     }
 
     table.stocks {
+        @include media-breakpoint-down(sm) {
+            .hideColumn {
+                display: none;
+            }
+        }
+
         td, th {
             padding: 0.25rem 0.5rem;
         }
